--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv='x-ua-compatible' content='ie=edge'>
 	<title>RetroPie package licences</title>
 	<link rel='stylesheet' type='text/css' href='app.css'>
-	<script defer type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js'></script>
+	<script defer type='text/javascript' src='Chart.min.js'></script>
 	<script defer type='text/javascript' src='app.js'></script>
 </head>
 <body class='center'>
